--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-*{
-	padding:0px;
-	margin:0px;
-}
-#container{
-	display:flex;
-}
 * {
   padding: 0px;
   margin: 0px;
@@ -29,7 +22,7 @@
     margin-top: 130px;
     padding-top:20px ;
     flex: 1;
-    flex-direction: wrap;
+    flex-direction:row;
 }
 #card_description{
     padding: 10px; 
